--- a/AutolayoutAnimation/AutolayoutAnimation/Base.lproj/Main.storyboard
+++ b/AutolayoutAnimation/AutolayoutAnimation/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,8 +20,70 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="47F-lo-eBc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Packing List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c6L-YO-qJu">
+                                        <rect key="frame" x="115.5" y="13" width="144" height="33"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bwk-jc-wUU">
+                                        <rect key="frame" x="337" y="7" width="30" height="45"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                        <state key="normal" title="+"/>
+                                        <connections>
+                                            <action selector="actionToggleMenu:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QGx-K5-4ED"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="bwk-jc-wUU" secondAttribute="trailing" constant="8" id="0J3-dJ-RUV"/>
+                                    <constraint firstItem="c6L-YO-qJu" firstAttribute="centerX" secondItem="47F-lo-eBc" secondAttribute="centerX" id="Eh6-k4-aja"/>
+                                    <constraint firstAttribute="height" constant="60" id="HeH-KT-Bux"/>
+                                    <constraint firstItem="c6L-YO-qJu" firstAttribute="centerY" secondItem="47F-lo-eBc" secondAttribute="centerY" id="h36-q8-PWp"/>
+                                    <constraint firstItem="bwk-jc-wUU" firstAttribute="centerY" secondItem="c6L-YO-qJu" secondAttribute="centerY" id="sHs-kZ-OxR"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Q3c-iH-PSW">
+                                <rect key="frame" x="0.0" y="60" width="375" height="607"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="Ywr-U6-1sw">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ywr-U6-1sw" id="iFc-Sx-3VZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="CGm-OA-cxO"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="XnJ-CF-8Ws"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Q3c-iH-PSW" secondAttribute="bottom" id="3pJ-3x-uuw"/>
+                            <constraint firstItem="Q3c-iH-PSW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="7w7-YL-vUS"/>
+                            <constraint firstItem="Q3c-iH-PSW" firstAttribute="top" secondItem="47F-lo-eBc" secondAttribute="bottom" id="KzA-KQ-enP"/>
+                            <constraint firstAttribute="trailing" secondItem="Q3c-iH-PSW" secondAttribute="trailing" id="TVS-Wm-9ed"/>
+                            <constraint firstItem="47F-lo-eBc" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="giR-PH-Zwj"/>
+                            <constraint firstItem="47F-lo-eBc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="n0w-O0-Rkj"/>
+                            <constraint firstAttribute="trailing" secondItem="47F-lo-eBc" secondAttribute="trailing" id="zjN-93-V5a"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="buttonMenu" destination="bwk-jc-wUU" id="kBf-Sb-D8r"/>
+                        <outlet property="menuHeightConstraint" destination="HeH-KT-Bux" id="oOV-VO-miG"/>
+                        <outlet property="tableview" destination="Q3c-iH-PSW" id="00c-Tw-UmV"/>
+                        <outlet property="titleLabel" destination="c6L-YO-qJu" id="rnh-VR-QTP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
